[+] plxUtils::unSlash($content) recursive for multidimentional array #286 (sudwebdesign)
[+] $LANGS array replaced with constants #389 (bazooka07)
[+] lostpassword token generation refacto #385 (P3ter)
[+] plxDate and plxShow optimisations : str_replace() replaced by strtr() #407 (bazooka07)
[+] Default theme : add font-display swap #427 (guiguid)
[+] plx classes autoload #431 (bazooka07)
FIX Do not unset CSRF token if $_POST is empty #286 (sudwebdesign)
FIX Wording and translation of L_MEDIAS_MAX_UPLOAD_NBFILE #286 (sudwebdesign) 
FIX Wording and translation of L_CONFIG_ADVANCED_USERFOLDERS #286 (sudwebdesign)
FIX Missing polish translations #374 (P3ter)
FIX Article edition always show comments as enabled #402 (bazooka07)

## PLUXML 5.8.3 (yyyy/mm/dd) ##
[+] Enhancement for CSRF token #385 (bazooka07)
[+] New "rename" and "copy to clipboard" icons in medias administration page #387 (bazooka07)
[+] plxMotor and plxFeed regex refacto #380 (P3ter, bazooka07)
[+] plxToken and plxCapcha optimisations #406 (bazooka07)
FIX Articles and static pages with underscores are not visible #380 (P3ter)
FIX Headline and Tags toggles always closed in article edition #382 (sudwebdesign)
FIX Fix medias administration zoombox and javascript optimisations #387 (bazooka07)
FIX Error when adding or modifying a user #393 (P3ter)
FIX Alternative to PHPMailer with sendmail #401 (bazooka07)
FIX Used of an extern URL as a static page #403 (bazooka07)
FIX Comment editor is empty #418 (P3ter)
FIX Comments list sorting #419 (P3ter)
FIX Comments feed link is displayed even if comments are disabled #429 (guiguid)
FIX Default theme : double underline on footer menu (P3ter)  

## PLUXML 5.8.2 (2020/02/09) ##
[+] #371 Check PluXml update using javascript if "curl" or "file_get_contents" can not be used (bazooka07)
FIX #365 plxUtils::getLangs() optimisations (bazooka07)
FIX #367 plxUtils::sendmail() minor correction (bazooka07)
FIX #369 Comments indentation does not work on frontend (P3ter)