@@ -9,11 +9,13 @@
 [+] plxDate and plxShow optimisations : str_replace() replaced by strtr() #407 (bazooka07)
 [+] Default theme : add font-display swap #427 (guiguid)
 [+] plx classes autoload #431 (bazooka07)
+[+] $plxShow->lastArtList optimisations #433 (bazooka07)
 FIX Do not unset CSRF token if $_POST is empty #286 (sudwebdesign)
 FIX Wording and translation of L_MEDIAS_MAX_UPLOAD_NBFILE #286 (sudwebdesign) 
 FIX Wording and translation of L_CONFIG_ADVANCED_USERFOLDERS #286 (sudwebdesign)
 FIX Missing polish translations #374 (P3ter)
 FIX Article edition always show comments as enabled #402 (bazooka07)
+FIX $plxShow->lastArtList chapo and content length #433 (P3ter)
 
 ## PLUXML 5.8.3 (yyyy/mm/dd) ##
 [+] Enhancement for CSRF token #385 (bazooka07)
